--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
+*,
+*:before,
+*:after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'ppneue';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'ppneue';
+  src: url('fonts/ppneue.woff2') format('woff2');
+}
+
+html {
+  font-size: calc(100vw / 1728 * 10);
+}
+
+body {
+  font-size: clamp(16px, 1.6rem, 1.6rem);
+  font-family: "Matter Regular", sans-serif;
+
+  font-style: normal;
+  font-variation-settings: "ital" 0, "wght" 400;
+  background-color: white;
+  color: black;
+  min-height: 100vh;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  letter-spacing: -0.03em;
+}
+
+[data-hidden] {
+  opacity: 0;
+}
+
+h1 {
+  font-size: 16rem;
+  font-weight: 400;
+  letter-spacing: -0.03em;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
 }
